added new folders

--- a/ch1/anchors.html
+++ b/ch1/anchors.html
@@ -6,6 +6,16 @@
     <title>Links App</title>
 </head>
 <body>
+    <a href="https://codingfactory.aueb.gr/" target="_blank">Visit us</a>
+    <br>
+    <br>
+    <hr>
+    <a href="https://developer.mozilla.org/en-US/">Mozilla Development Network<a>
+        <br>
+        <br>
+        <hr>
+
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements">MDN HTML ELEMENTS </a>
     
 </body>
 </html>
