--- a/ch1/anchors.html
+++ b/ch1/anchors.html
@@ -6,6 +6,7 @@
     <title>Links App</title>
 </head>
 <body>
+    <!-- These are comments-->
     <a href="https://codingfactory.aueb.gr/" target="_blank">Visit us</a>
     <br>
     <br>
