--- a/ch2/lists.html
+++ b/ch2/lists.html
@@ -19,8 +19,15 @@
         }
         a{
             display:inline-block;
+            /*box model*/
             padding: 5px 80px;
             border: 1px solid black;
+            /*typography*/
+            font-weight: bold;
+            text-decoration: none;
+            /*visual;*/
+            color: black;
+            cursor: pointer;
         }
     </style>
 </head>
