--- a/ch2/class.html
+++ b/ch2/class.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Factory</title>
-    <link rel="stylesheet" href="./css/class.css">
+
+    <style>
+
+        .cod-title {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+            font-size: 2.5rem;
+            font-weight: 700;          /* 100 400 (mormal) - 700 (bold) 900 */
+            text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        .cod-text {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+            font-size: 1rem;    /* 16px     */
+            font-weight: 400;   /* normal  */
+            line-height: 1.5;   /* for readability */
+            color: rgb(21, 5, 120);
+            font-family: 'Times New Roman',Times,serif;
+        }
+
+
+    </style>
 </head>
 <body>
+    <h1 id="codTitle" class="cod-title">Coding Factory</h1>
 
-    <h1 class="cod-title">Coding Factory</h1>
+    <p class="cod-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, numquam reprehenderit libero quod laborum impedit repellat vel animi quos dicta quia consectetur? Repudiandae reiciendis magnam, repellat sint eligendi illum pariatur!</p>
 
-    <p class="code-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eius neque cumque unde nulla accusamus ut dolore aliquam laudantium mollitia quasi quas dolorem, excepturi, autem quae necessitatibus vitae fugit? Doloremque?</p>
-
-    <p class="cod-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, repudiandae totam officia incidunt voluptas ea sed officiis eligendi voluptatum eius fugiat similique neque, veritatis magni animi beatae facere hic modi.</p>
-
+    <p class="cod-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum, nulla illo, vero praesentium sequi quos enim sed est fugiat placeat voluptates earum temporibus at eligendi consectetur delectus autem quidem.</p>
 </body>
 </html>
