--- a/ch2/form.html
+++ b/ch2/form.html
@@ -71,7 +71,7 @@
             placeholder="insert password">
         </div>
         <div>
-            <input type="submit"value="Submit">
+            <input type="submit"value="Submit" class="submit">
         </div>
 
 
